<!--
  ~ Copyright (c) 2017,2018   Mathijs Lagerberg, Pixplicity BV
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Gene-rate</string>
    <string name="initial_question">Are you finding the app useful?</string>
    <string name="secondary_question_positive">Would you consider leaving a review?</string>
    <string name="secondary_question_negative">Sorry about that. Could you please tell me what went wrong to improve the app?</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>
    <string name="button_later">LATER</string>
    <string name="swipe_to_dismiss">Swipe to dismiss</string>
</resources>
